--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,12 @@
         "use": "@vercel/python",
         "config": { "maxLambdaSize": "15mb", "runtime": "python3.12.5" }
       },
+      {
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "staticfiles_build"
+        }
+      }
 
     ],
     "routes": [
