--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,22 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "project/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.12.5" }
-      },
-      {
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "staticfiles_build"
-        }
-      }
-
-    ],
-    "routes": [
-      {
-        "src": "/static/(.*)",
-        "dest": "/static/$1"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "project/wsgi.py"
-      }
-    ]
+  "version": 2,
+  "name": "project",
+  "builds": [
+    {
+      "src": "app.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "app.py"
+    }
+  ],
+  "env": {
+    "PYTHON_VERSION": "3.12.5"
+  },
+  "static": {
+    "public": "static"
   }
+}
