--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,27 @@
 {
   "version": 2,
-  "name": "project",
   "builds": [
     {
-      "src": "build.sh",
-      "use": "@vercel/static-build"
+      "src": "project/wsgi.py",
+      "use": "@vercel/python",
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+    },
+    {
+      "src": "build_files.sh",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "staticfiles_build"
+      }
     }
   ],
   "routes": [
     {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "app/__init__.py"
+      "dest": "project/wsgi.py"
     }
-  ],
-  "env": {
-    "PYTHON_VERSION": "3.12.5"
-  },
-  "static": {
-    "public": "static"
-  }
+  ]
 }
